src/objects/OCIO_Ethics_OGE_278_Form_Request__c.object
<CustomObject>
    <description>Junction object for Requests and the 278 form.</description>
    <fields>
        <fullName>Ethics_Date_Released__c</fullName>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethics_OGE_278_Form__c</fullName>
        <label>OGE 278 Form</label>
        <referenceTo>OCIO_Ethics_Form__c</referenceTo>
        <relationshipLabel>OGE 278 Form Requests</relationshipLabel>
        <relationshipName>OGE_278_Form_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ethics_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <label>Requested by</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>OGE 278 Form Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Request {00000}</displayFormat>
        <label>OGE 278 Form Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OGE 278 Form Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>